--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ bitsandbytes
 git+https://github.com/huggingface/transformers.git
 git+https://github.com/huggingface/peft.git
 git+https://github.com/huggingface/accelerate.git
-typer
-datasets
+typer[all]
 scipy
