--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ git+https://github.com/huggingface/peft.git
 git+https://github.com/huggingface/accelerate.git
 typer[all]
 scipy
+google-generativeai
